[package]
name = "noti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
mio = { version = "1.0.3", features = ["os-poll", "os-ext"] }
regex = "1.11.1"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["io-std", "mio", "macros", "rt-multi-thread"] }
