[package]
name = "noti"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["error", "from"] }
futures = "0.3.31"
indexmap = { version = "2.7.1", features = ["serde"] }
notify-rust = "4.11.4"
regex = "1.11.1"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["io-std", "macros", "rt-multi-thread", "fs"] }

[features]
default = []
integration_tests = []
